objects/Batch_Child_Workflow_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Child_Object_API_Name__c</fullName>
        <label>Child Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Workflow_Status__c</fullName>
        <label>Child Workflow Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Field_API_Name__c</fullName>
        <inlineHelpText>This is the parent field that resides on the child object</inlineHelpText>
        <label>Child Lookup To Parent Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_API_Name__c</fullName>
        <label>Parent Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Workflow_Status__c</fullName>
        <label>Parent Workflow Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X123_Task_Key_Value__c</fullName>
        <label>123 Task Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Workflow_Action__c</fullName>
        <inlineHelpText>The parent action which initiates child workflow progression</inlineHelpText>
        <label>Parent Workflow Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <label>Batch Child Workflow Mapping</label>
    <pluralLabel>Batch Child Workflow Mapping</pluralLabel>
</CustomObject>